fix: plot options button spacing

--- a/data-view/data_view/public/css/open_menu_button.css
+++ b/data-view/data_view/public/css/open_menu_button.css
@@ -14,7 +14,7 @@
   padding: 4px 16px;
   font-size: 14px;
   text-transform: uppercase;
-  letter-spacing: 1.2;
+  letter-spacing: 1.6px;
 
   border-radius: 0 0 8px 0;
   background-color: var(--primary-color);
